--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                 <li>
                     <a href="#profile">Team</a>
                 </li>
+                <li>
+                    <a href="https://csivit.com/blog">Blog</a>
+                </li>
                 <div class="social_links">
                 <li><a href="https://www.facebook.com/csivit/?fref=ts" target="_blank">
                     <span class="typcn typcn-social-facebook-circular"></span>
@@ -71,7 +74,7 @@
                 </a>
                 </li>
                 <li>
-                <a href="https://plus.google.com/113621378385383873037/videos">
+                <a href="mailTo:info@csivit.com">
                     <span class="typcn typcn-social-at-circular" target="_blank"></span>   
                 </a>
                 </li> </div>
@@ -210,7 +213,7 @@
 
    
     </div>         
-<svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 697.04 255.95"><defs><style>
+<svg id="Layer_2" class="pull-right" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 697.04 255.95"><defs><style>
     .cls-1t{font-size:73.99px;}
     .cls-1t,.cls-3t,.cls-4t{fill:#fff;}
     .cls-1t,.cls-3t,.cls-5t{font-family:Lato;}
@@ -233,6 +236,9 @@
           <h2>
           WHAT WE <span class="work_anim">WORK</span> ON 
           <div class="line_solid line_right hidden-xs"></div></h2>
+          
+          <h3 style="padding-bottom:35px;">We are a multi-disciplinary University Chapter with a sole aim to <b>hone technology and push it forward</b>.<br> Projects, research, competitive programming, and a lot more to add on to our swag. </h3>
+          
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 			<div id="grid-gallery" class="grid-gallery">
@@ -267,7 +273,7 @@
 						<li>
 							<figure>
 								<img src="img/projects/thumbs/VITLink.png" alt="img05"/>
-								<figcaption><h3>VITLink</h3><p>Your tour guide around the VIT Vellore campus.</p></figcaption>
+								<figcaption><h3>VITLink</h3><p>Your tour guide around VIT Vellore campus.</p></figcaption>
 							</figure>
 						</li>
 						<li>
@@ -581,6 +587,8 @@
 <section id="events">
     <div class="container">
        <h2>what we<span> organize</span> for you</h2>
+        <h3 style="margin-bottom:60px;">
+        As a part of our curriculum, we organize a broad range of workshops and events - technical and non-technical to keep our participants engaged with the latest technologies and hacks. </h3>    
          <div class="line_solid line_right hidden-xs"></div>
         <div class="row"> 
              <div class="col-md-4 portfolio-item"> 
@@ -666,7 +674,9 @@
 <section id="profile">
 <div class="container">
     <div class="row">
-        <h2 style="color: #fff">This is <span class="us" style="font-family: Lato_semibold; color: #fff">us</span><div class="line_solid line_right hidden-xs"></div>  </h2>
+        <h2 style="color: #fff">Our <span class="us" style="font-family: Lato_semibold; color: #fff">TEAM</span><div class="line_solid line_right hidden-xs"></div>  </h2>
+                <h3 style="margin-bottom:60px;color:#fff">
+        We are some of the best designers, developers, entrepreneurs and innovators who love to work together. More than work, we are family.  </h3>   
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 board_list">
          <ul>
              <li>President -
